# insta_reels_tools_logger

./: .dockerignore  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  README.md  agent.md  railway.toml
.cursor/rules/: ai-tools-tracker.mdc
backend/: .env.example  Dockerfile  config.py  main.py  pyproject.toml
backend/db/: client.py
backend/db/migrations/: 001_initial.sql  002_processing_error.sql  003_caption.sql
backend/models/: schemas.py
backend/routers/: diagnostics.py  metrics.py  tools.py  videos.py  webhook.py
backend/services/: assemblyai_check.py  deduplicator.py  downloader.py  extractor.py  processing.py  telegram_bot.py  transcriber.py
backend/tests/: test_caption_metadata.py  test_diagnostics.py  test_health.py  test_tools_search.py
frontend/: SKILL_FRONTEND_AESTHETICS.md  index.html  package-lock.json  package.json  playwright.config.js  tailwind.config.js
frontend/e2e/: demo.spec.js
frontend/public/: site.webmanifest
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: FilterTabs.jsx  FilterTabs.test.jsx  StatusButton.jsx  TagFilter.jsx  ToolCard.jsx  ToolsTable.jsx
frontend/src/components/shell/: BarList.jsx  PageHeader.jsx  Panel.jsx  StatCard.jsx
frontend/src/pages/: Dashboard.jsx  Feed.jsx  VideoDetail.jsx
frontend/src/theme/: chartColors.js
scripts/: record-demo-gif.sh
